expected/main/gens/primModIx-neg-32.err
ERROR: "actual/main/gens/primModIx-neg-32.lc", line 3
external modIx33_5   {primModIx 33  5} :: Bit 33 -> Ix 5   -- bigger than a word, not power of two
         ^
No generated implementation: Modulus must be a power of two, or bit vector must fit in one word.

ERROR: "actual/main/gens/primModIx-neg-32.lc", line 4
external modIx64_17  {primModIx 64 17} :: Bit 64 -> Ix 17
         ^
No generated implementation: Modulus must be a power of two, or bit vector must fit in one word.

ERROR: "actual/main/gens/primModIx-neg-32.lc", line 7
external modIx64_8G  {primModIx 64 8G} :: Bit 64 -> Ix 8G  -- invalid index size
         ^
No generated implementation: Argument value 8589934592 is too large; must be at most 2147483647

ERROR: "actual/main/gens/primModIx-neg-32.lc", line 8
external modIx12_0   {primModIx 12  0} :: Bit 12 -> Ix 0
         ^
No generated implementation: Argument value 0 is too small; must be at least 1

ERROR: "actual/main/gens/primModIx-neg-32.lc", line 9
external modIx32_2G  {primModIx 32 2G} :: Bit 32 -> Ix 2G
         ^
No generated implementation: Argument value 2147483648 is too large; must be at most 2147483647

ERROR: "actual/main/gens/primModIx-neg-32.lc", line 10
external modIx32_4G  {primModIx 32 4G} :: Bit 32 -> Ix 4G
         ^
No generated implementation: Argument value 4294967296 is too large; must be at most 2147483647

ERROR: Aborting after 6 previously reported errors

